<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:paddingTop="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/n_edit"
                    android:layout_weight="1"
                    android:hint="Bag Size in mL"
                    android:textColor="?attr/colorBackgroundFloating"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/h_edit"
                    android:layout_weight="1"
                    android:hint="Drops per ml"
                    android:textColor="?attr/colorBackgroundFloating"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColorHint="@android:color/darker_gray" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/s_edit"
                android:hint="Time in Hours"
                android:textColor="?attr/colorBackgroundFloating"
                android:gravity="center_vertical|center_horizontal"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/display_answer"
                android:padding="20dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/background_dark" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/up_chevron"
                    android:text="@string/up_button"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_chevron"
                    android:layout_weight="1"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:textColor="@android:color/black" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/right_chevron"
                    android:layout_weight="1"
                    android:text="@string/right_button"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <Button
                android:text="@string/down_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/down_chevron"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textColor="@color/colorAccent" />

            <Button
                android:text="Calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textColor="@color/colorAccent" />

            <Button
                android:text="Next Calculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_calculation_2"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>